# lab08_control

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: pid_defaults.yaml  pid_student.yaml  student_gains.yaml  student_gains_example.yaml  waypoints.yaml
lab08_control/: control_services.py  goal_controller.py  plotter.py  trajectory_publisher.py
launch/: lab08.launch.py
tools/: cf_utils.py  fix_lighthouse_frame.py  reset_drone.py  restore_lighthouse_geo.py  set_lighthouse_geo.py
